<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        style="@style/Toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:text="@string/firth_text"
                android:textColor="@color/black"
                android:textSize="@dimen/defalt_text_size"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/oval"
                android:text="@string/Sixth_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"

                android:text="@string/second_text"
                android:textColor="@color/black"
                android:textSize="@dimen/defalt_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:text="@string/Seventh_text"

                android:textSize="@dimen/text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"

                android:text="@string/Third_text"
                android:textColor="@color/black"
                android:textSize="@dimen/defalt_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:text="@string/Eightth_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:text="@string/Fourth_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:text="@string/Tenth_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:text="@string/Fiveth_text"
                android:textColor="@color/black"
                android:textSize="@dimen/defalt_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:text="@string/Eleventh_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:text="@string/Longtext"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/photo_one" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:src="@drawable/photo_two" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
